<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.logonrm.configuracaopersonagem.PeronagemActivity">

    <RelativeLayout
        android:id="@+id/rlCab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/label_titulo"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlCab"
        android:layout_above="@+id/rlRodape" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_nome" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_sexo" />

            <RadioGroup
                android:weightSum="2"
                android:orientation="horizontal"
                android:id="@+id/rgSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/rbM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_masc" />

                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/rbF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_fem" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_classe" />

            <Spinner
                android:id="@+id/spClasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/classes">

            </Spinner>

            <ImageView
                android:id="@+id/ivClasse"
                android:layout_gravity="center"
                android:layout_width="96dp"
                android:layout_height="96dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_forca"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:gravity="right"/>

            <SeekBar
                android:id="@+id/sbForca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnCriar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_criar"/>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlRodape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/label_rodape"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>
